【Feature】index page

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
   </head>
   <body>
-    <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+    <div class="container">
+      <section class="index">
+        <header class="title">
+          <h1>请选择您的情缘体型>></h1>
+        </header>
+
+        <div class="content">
+          <img src="/assets/images/chengnan.jpg" alt="" />
+          <img src="/assets/images/chengnv.jpg" alt="" />
+          <img src="/assets/images/luoli.jpg" alt="" />
+          <img src="/assets/images/zhengtai.jpg" alt="" />
+        </div>
+      </section>
     </div>
-    <script src="js/compiled/app.js" type="text/javascript"></script>
+
+    <script src="build/main.js"></script>
   </body>
 </html>
